--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,32 @@
-# ------------------------------
-# Environment Variables for API service & worker
-# ------------------------------
+# ======================================
+# Agentic Workflow Cases - 环境变量配置
+# ======================================
 
 # ------------------------------
-# Common Variables
+# AI模型API配置
 # ------------------------------
 
-# Volcengine
-DOUBAO_API_KEY=your-key
-DOUBAO_DEEPSEEK_V3=your-model_id
-DOUBAO_SEED_1.6=your-model_id
+# 豆包API配置 - 用于AI代理的语言模型调用
+DOUBAO_API_KEY=your_doubao_api_key_here
+DOUBAO_DEEPSEEK_V3=your_deepseek_model_id
+DOUBAO_SEED_1.6=your_seed_model_id
 
-# search
-SERPAPI_API_KEY=your-key
+# ------------------------------
+# 搜索API配置 (用于web_access案例)
+# ------------------------------
+
+# SERP API密钥 - 用于Google搜索功能
+SERPAPI_API_KEY=your_serpapi_key_here
+
+# ------------------------------
+# 使用说明
+# ------------------------------
+# 1. 复制此文件为 .env
+# 2. 填入你的实际API密钥
+# 3. 根据需要调整其他配置项
+# 4. 确保 .env 文件不要提交到版本控制系统
+#
+# API密钥获取方式:
+# - 豆包API: https://www.volcengine.com/product/doubao
+# - SERP API: https://serpapi.com/
+# - Agently: https://github.com/Maplemx/Agently
